bitflip/src/snapshots/bitflip__db__tests__sections_table_snapshot.snap
---
source: bitflip/src/db.rs
expression: diff
snapshot_kind: text
---
[
    Issue {
        ident: TableIdent {
            schema: None,
            name: "sections",
        },
        level: Medium,
        kind: Changed(
            Diff {
                column: "id",
                db_type: "TEXT",
                db_nullable: true,
                welds_type: "Uuid",
                welds_nullable: false,
                type_changed: false,
            },
        ),
    },
    Issue {
        ident: TableIdent {
            schema: None,
            name: "sections",
        },
        level: High,
        kind: Changed(
            Diff {
                column: "game_index",
                db_type: "INTEGER",
                db_nullable: false,
                welds_type: "u8",
                welds_nullable: false,
                type_changed: true,
            },
        ),
    },
    Issue {
        ident: TableIdent {
            schema: None,
            name: "sections",
        },
        level: High,
        kind: Changed(
            Diff {
                column: "section_index",
                db_type: "INTEGER",
                db_nullable: false,
                welds_type: "u8",
                welds_nullable: false,
                type_changed: true,
            },
        ),
    },
    Issue {
        ident: TableIdent {
            schema: None,
            name: "sections",
        },
        level: High,
        kind: Changed(
            Diff {
                column: "flips",
                db_type: "INTEGER",
                db_nullable: false,
                welds_type: "u32",
                welds_nullable: false,
                type_changed: true,
            },
        ),
    },
    Issue {
        ident: TableIdent {
            schema: None,
            name: "sections",
        },
        level: High,
        kind: Changed(
            Diff {
                column: "created_at",
                db_type: "TEXT",
                db_nullable: false,
                welds_type: "DateTime<Utc>",
                welds_nullable: false,
                type_changed: true,
            },
        ),
    },
    Issue {
        ident: TableIdent {
            schema: None,
            name: "sections",
        },
        level: High,
        kind: Changed(
            Diff {
                column: "updated_at",
                db_type: "TEXT",
                db_nullable: false,
                welds_type: "DateTime<Utc>",
                welds_nullable: false,
                type_changed: true,
            },
        ),
    },
]
